// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute nav endpoint should return failure - invalid FundId 1`] = `
{
  "errorMessage": "The data provider didn't return any value for fundId: 2",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute nav endpoint should return success - aum 1`] = `
{
  "data": {
    "result": {
      "currency": null,
      "fundId": 1,
      "navDate": "1749839400000",
      "navPerShare": 1.01702150000035,
    },
  },
  "result": 15172254.246303676,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute nav endpoint should return success - nav 1`] = `
{
  "data": {
    "result": {
      "currency": null,
      "fundId": 1,
      "navDate": "1749839400000",
      "navPerShare": 1.01702150000035,
    },
  },
  "result": 1.01702150000035,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
